fix multi-line text wrap

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@
 
 .announcement-info p {
     margin: 5px 0px 15px 0px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .announcement-info:last-child p {
